--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,8 @@ img {
   align-items: center;
 }
 
-.contact-nav .link:hover {
+.contact-nav .link:hover,
+.contact-nav .link:focus {
   color: var(--accent-color);
 }
 
@@ -344,6 +345,8 @@ img {
 .team-list .item-descr {
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
 
 .team-list .title {
@@ -363,27 +366,33 @@ img {
 
 .icon-wrap {
   display: flex;
-  padding-left: 32px;
-  padding-right: 32px;
 }
 
-.link-icon {
+.icon-wrap li {
+  margin-right: 10px;
+}
+
+.icon-wrap li:last-child {
+  margin-right: 0;
+}
+
+.icon-wrap .link-icon {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
-  color: #afb1b8;
+  fill: #afb1b8;
   margin-right: 10px;
 }
 
-.link-icon:last-child {
+.icon-wrap .link-icon:last-child {
   margin-right: 0;
 }
 
-.link-icon:hover,
-.link-icon:focus {
-  color: var(--primary-bg-color);
+.icon-wrap .link-icon:hover,
+.icon-wrap .link-icon:focus {
+  fill: var(--primary-bg-color);
   background-color: var(--accent-color);
   border-radius: 50%;
 }
@@ -434,10 +443,10 @@ img {
 
 .flex-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-contacts {
-  margin-right: 70px;
 }
 
 .site-footer .logo {
@@ -471,7 +480,7 @@ img {
   margin-bottom: 0;
 }
 
-.site-footer .address span {
+.site-footer .address {
   color: var(--primary-bg-color);
   font-size: 14px;
   line-height: 1.714;
@@ -489,15 +498,17 @@ img {
   font-weight: 400;
 }
 
+.link.address:hover,
 .link.mail:hover,
 .link.tel:hover,
+.link.address:focus,
 .link.mail:focus,
 .link.tel:focus {
   color: var(--accent-color);
 }
 
 .footer-socials {
-  padding: 14px 20px;
+  margin-left: 90px;
 }
 
 .footer-socials .text-icon {
@@ -507,6 +518,7 @@ img {
   line-height: normal;
   letter-spacing: 0.42px;
   text-transform: uppercase;
+  margin-top: 12px;
   margin-bottom: 20px;
 }
 
@@ -530,7 +542,7 @@ img {
   align-items: center;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
-  color: #ffffff;
+  fill: var(--primary-bg-color);
 }
 
 .footer-socials .link-icon:hover,
@@ -565,16 +577,17 @@ img {
   margin-right: 0;
 }
 
-.filter-list .item:hover {
-  border-radius: 4px;
-  background: #2196f3;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
-    0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
-}
-
 .filter-list .button {
   padding: 6px 22px;
   border: 0;
+  border-radius: 4px;
+}
+
+.filter-list .button:hover,
+.filter-list .button:focus {
+  background: #2196f3;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
 /* Список наших робіт */
@@ -585,6 +598,7 @@ img {
 }
 
 .portfolio-list .item {
+  flex-basis: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -603,10 +617,8 @@ img {
 
 .portfolio-list .item:hover,
 .portfolio-list .item:focus {
-  border: 1px solid #eee;
-  background: #fff;
-  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
-    0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-list .portfolio-descr {
