--- a/css/styles.css
+++ b/css/styles.css
@@ -641,5 +641,5 @@ img {
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.48px;
-  color: var(--primary-text-color);
+  color: #757575;
 }
