--- a/css/styles.css
+++ b/css/styles.css
@@ -518,7 +518,7 @@ img {
   line-height: normal;
   letter-spacing: 0.42px;
   text-transform: uppercase;
-  margin-top: 12px;
+
   margin-bottom: 20px;
 }
 
@@ -615,8 +615,8 @@ img {
   text-decoration: none;
 }
 
-.portfolio-list .item:hover,
-.portfolio-list .item:focus {
+.portfolio-list .link-portfolio:hover,
+.portfolio-list .link-portfolio:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
